# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build option_parser.a {{{
config("option_parser_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("option_parser_public_config") {
  include_dirs = [ "export" ]
}

ohos_static_library("option_parser") {
  sources = [ "src/option_parser.cpp" ]

  configs = [ ":option_parser_config" ]

  public_configs = [ ":option_parser_public_config" ]

  subsystem_name = "graphic"
  part_name = "graphic_standard"
}
## Build option_parser.a }}}
