# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build raw_maker.a {{{
config("raw_maker_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("raw_maker_public_config") {
  include_dirs = [
    "export",
    "../raw_parser/export",
  ]
}

ohos_static_library("raw_maker") {
  sources = [ "src/raw_maker.cpp" ]

  configs = [ ":raw_maker_config" ]

  public_configs = [ ":raw_maker_public_config" ]

  deps = [ "..:libgslogger" ]

  subsystem_name = "graphic"
  part_name = "graphic_2d"
  external_deps = [
    "c_utils:utils",
    "zlib:libz",
  ]
}
## Build raw_maker.a }}}
