# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build socketpair.so {{{
config("socketpair_config") {
  visibility = [ ":socketpair" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("socketpair_public_config") {
  include_dirs = []
}

config("socketpair_all_dependent_config") {
  include_dirs = [ "export" ]
}

ohos_shared_library("socketpair") {
  sources = [ "src/local_socketpair.cpp" ]

  configs = [ ":socketpair_config" ]

  public_configs = [ ":socketpair_public_config" ]
  all_dependent_configs = [ ":socketpair_all_dependent_config" ]

  deps = [ "//foundation/graphic/graphic_2d/utils:scoped_bytrace" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "graphic_2d"
  subsystem_name = "graphic"
}

group("test") {
  testonly = true
  deps = [ "test:test" ]
}
## Build socketpair.so }}}
