# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

## Build libbootanimation_utils.so {{{
config("libbootanimation_utils_config") {
  include_dirs = [
    "$graphic_2d_root/interfaces/inner_api/bootanimation",
    "$graphic_2d_root/frameworks/bootanimation/include",
  ]
}

ohos_shared_library("libbootanimation_utils") {
  public_configs = [ ":libbootanimation_utils_config" ]

  sources = [ "boot_animation_utils.cpp" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  innerapi_tags = [
    "platformsdk",
    "sasdk",
  ]
  part_name = "graphic_2d"
  subsystem_name = "graphic"
}
## Build libbootanimation_utils.so }}}
